--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
                   key: ${{ secrets.DEPLOY_SECRET }}
                   script: |
                       cd ~/frontend
-                      sudo cp public/. /var/www/html/
+                      sudo cp -r ./public/* /var/www/html/
