--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@popperjs/core": "^2.11.5",
         "autoprefixer": "^10.4.8",
+        "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
