--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
+        "croppie": "^2.6.5",
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
