--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@popperjs/core": "^2.11.5",
+        "@tinymce/tinymce-react": "^4.2.0",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "croppie": "^2.6.5",
+        "datatables.net-bs5": "^1.12.1",
+        "datatables.net-responsive-bs5": "^2.3.0",
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
