--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "croppie": "^2.6.5",
         "datatables.net-bs5": "^1.12.1",
         "datatables.net-responsive-bs5": "^2.3.0",
+        "html-react-parser": "^3.0.4",
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
