--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-router-dom": "^6.4.0"
+        "react-router-dom": "^6.4.0",
+        "video.js": "^7.20.3"
     }
 }
