--- a/package.json
+++ b/package.json
@@ -60,9 +60,13 @@
         "datatables.net-bs5": "^1.12.1",
         "datatables.net-responsive-bs5": "^2.3.0",
         "html-react-parser": "^3.0.4",
+        "i18next": "^21.9.2",
+        "i18next-browser-languagedetector": "^6.1.5",
+        "i18next-http-backend": "^1.4.4",
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-i18next": "^11.18.6",
         "react-router-dom": "^6.4.0",
         "video.js": "^7.20.3"
     }
