--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
         "test-w": "jest --watch",
         "build": "webpack --mode=production --env prod",
         "serve": "webpack serve --open --stats-error-details --port=3000",
-        "lint": "eslint src/**/*.js",
+        "lint": "eslint --fix --ext .js,.jsx ./src",
         "heroku:login": "heroku login",
         "heroku:container:login": "heroku container:login",
         "heroku:push": "heroku container:push web --app mukasa-elroy-peter",
         "heroku:release": "heroku container:release web --app mukasa-elroy-peter",
         "preheroku:deploy": "npm-run-all build heroku:login heroku:container:login",
         "heroku:deploy": "npm-run-all heroku:push heroku:release"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "pnpm lint",
+            "git update-index --again"
+        ]
     },
     "keywords": [],
     "author": "",
@@ -31,6 +37,8 @@
         "css-loader": "^6.7.1",
         "eslint": "^8.18.0",
         "eslint-plugin-react": "^7.30.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "file-loader": "^6.2.0",
         "jest": "^28.1.1",
         "jest-environment-jsdom": "^28.1.1",
@@ -43,7 +51,9 @@
         "url-loader": "^4.1.1",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.9.2"
+        "webpack-dev-server": "^4.9.2",
+        "prettier": "^2.7.1",
+        "lint-staged": "^13.0.3"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
