--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
         "eslint": "^8.18.0",
-        "eslint-plugin-react": "^7.30.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.0",
         "file-loader": "^6.2.0",
         "jest": "^28.1.1",
         "jest-environment-jsdom": "^28.1.1",
+        "lint-staged": "^13.0.3",
         "postcss": "^8.4.16",
         "postcss-loader": "^7.0.1",
+        "prettier": "^2.7.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.3",
         "sass-loader": "^13.0.0",
@@ -51,9 +53,7 @@
         "url-loader": "^4.1.1",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.9.2",
-        "prettier": "^2.7.1",
-        "lint-staged": "^13.0.3"
+        "webpack-dev-server": "^4.9.2"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -62,6 +62,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@popperjs/core": "^2.11.5",
+        "@reduxjs/toolkit": "^1.8.6",
         "@tinymce/tinymce-react": "^4.2.0",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
@@ -77,7 +78,10 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-i18next": "^11.18.6",
+        "react-redux": "^8.0.4",
+        "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.4.0",
+        "react-toastify": "^9.0.8",
         "video.js": "^7.20.3"
     }
 }
