--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "i18next": "^21.9.2",
         "i18next-browser-languagedetector": "^6.1.5",
         "i18next-http-backend": "^1.4.4",
+        "moment": "^2.29.4",
         "npm-run-all": "^4.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
